@@ -1,4 +1,5 @@
 2013-XX-XX Jan Kotanski <jankotan@gmail.com>
+	* adding decoder for UTF8 endoced data
 	* fixing storing attributes in FieldArrays
 	* tagged as 1.0.X
 
